# Academic-Search-MCP

./: .gitignore  README.md  pyproject.toml
src/scholar_mcp/: __main__.py  config.py  server.py
src/scholar_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/scholar_mcp/tools/: google_scholar.py  semantic_scholar.py
test/: download_datasets.py  get_paper_details.py  get_recommended_papers.py  incremental_diffs.py  keyword_search.py  look_up_authors.py  relevance_search.py  test_all_tools.py  test_details.py
