[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-mcp"
version = "0.1.0"
description = "Combined Google Scholar and Semantic Scholar MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
scholar-mcp = "scholar_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
